# pmp-library-cuda

./: CMakeLists.txt
build-cuda/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  compile_commands.json  libpmp.so.3.0.0  pmpTargets.cmake  profile_dragon
build-cuda/src/pmp/: Makefile  cmake_install.cmake
config/: remeshing_cuda.txt  remeshing_default.txt  remeshing_hybrid.txt
src/pmp/algorithms/: CMakeLists.txt  remeshing.cpp  remeshing.h  remeshing_cuda.cpp  remeshing_cuda.h  remeshing_cuda_checkpoint.cpp  remeshing_cuda_checkpoint.h  remeshing_cuda_host.h
src/pmp/algorithms/cuda/: gpu_bvh.cu  gpu_bvh.cuh  gpu_trimesh.cu  gpu_trimesh.cuh  remesh_collapse.cu  remesh_flip.cu  remesh_smooth.cu  remesh_smooth_host.cu  remesh_split.cu
tests/: benchmark_dragon.cpp  profile_dragon.cpp  remeshing_cuda_test.cpp
